--- a/mobile/src/main/res/layout/activity_registro.xml
+++ b/mobile/src/main/res/layout/activity_registro.xml
@@ -12,7 +12,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:visibility="gone" />
+        android:visibility="gone"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"/>
 
     <ScrollView
         android:id="@+id/forma_login"
