--- a/mobile/src/main/res/layout/dialog_restablecer_contrasena.xml
+++ b/mobile/src/main/res/layout/dialog_restablecer_contrasena.xml
@@ -9,10 +9,7 @@
     <android.support.design.widget.TextInputLayout
         android:id="@+id/layoutLoginNombre"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true">
+        android:layout_height="wrap_content">
 
         <EditText
             android:id="@+id/restablecer_texto_email"
