--- a/mobile/src/main/res/menu/activity_pantalla_principal_drawer.xml
+++ b/mobile/src/main/res/menu/activity_pantalla_principal_drawer.xml
@@ -3,9 +3,9 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:id="@+id/nav_editar_perfil"
+            android:icon="@drawable/ic_person_outline"
+            android:title="@string/perfil" />
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
