--- a/mobile/src/main/res/values/colors.xml
+++ b/mobile/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="windowBackgraound">#C0C3C6</color>
     <color name="rowBackgroun">#F2F2F2</color>
     <color name="transparenteNaranja">#50F57C00</color>
+    <color name="transparenteGris">#66727272</color>
 </resources>
