--- a/mobile/src/main/res/menu/activity_pantalla_principal_drawer.xml
+++ b/mobile/src/main/res/menu/activity_pantalla_principal_drawer.xml
@@ -7,9 +7,9 @@
             android:icon="@drawable/ic_person_outline"
             android:title="@string/perfil" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:id="@+id/nav_mensajes"
+            android:icon="@drawable/ic_message_black_24dp"
+            android:title="@string/mensajes" />
         <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
