--- a/mobile/src/main/res/values/colors.xml
+++ b/mobile/src/main/res/values/colors.xml
@@ -12,4 +12,20 @@
     <color name="rowBackgroun">#F2F2F2</color>
     <color name="transparenteNaranja">#50F57C00</color>
     <color name="transparenteGris">#66727272</color>
+
+
+    <array name="array_dot_active">
+        <item>@color/colorPrimary</item>
+        <item>@color/colorPrimary</item>
+        <item>@color/colorPrimary</item>
+        <item>@color/colorPrimary</item>
+    </array>
+
+    <array name="array_dot_inactive">
+    <item>@color/colorPrimaryLight</item>
+    <item>@color/colorPrimaryLight</item>
+    <item>@color/colorPrimaryLight</item>
+    <item>@color/colorPrimaryLight</item>
+    </array>
 </resources>
+
