--- a/mobile/src/main/res/layout/activity_editar_perfil.xml
+++ b/mobile/src/main/res/layout/activity_editar_perfil.xml
@@ -102,13 +102,13 @@
             <RadioGroup
                 android:id="@+id/perfilSexo"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textoSexo"
                 android:layout_marginTop="5dp"
-                android:orientation="horizontal"
-                android:layout_below="@+id/textoSexo">
+                android:orientation="horizontal">
 
                 <RadioButton
-                    android:id="@+id/crear_privado"
+                    android:id="@+id/sexo_hombre"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -117,16 +117,99 @@
                     android:textColor="@color/textColorPrimary" />
 
                 <RadioButton
-                    android:id="@+id/crear_restringido"
+                    android:id="@+id/sexo_mujer"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:buttonTint="@color/colorAccent"
-                    android:text="Mujer"
+                    android:text="@string/mujer"
+                    android:textColor="@color/textColorPrimary" />
+
+                <RadioButton
+                    android:id="@+id/sexo_otro"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:buttonTint="@color/colorAccent"
+                    android:text="@string/otro"
                     android:textColor="@color/textColorPrimary" />
 
             </RadioGroup>
 
+            <TextView
+                android:id="@+id/textoFecha"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/perfilSexo"
+                android:text="@string/fecha_de_nacimiento"
+                android:textColor="@color/textColorSeconary" />
+
+            <EditText
+                android:id="@+id/editFecha"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textoFecha"
+                android:inputType="date"
+                android:onClick="showDatePickerDialog"
+                android:textColor="@color/textColorPrimary" />
+
+            <Button
+                android:id="@+id/boton_editar"
+                style="@style/Button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_below="@+id/editFecha"
+                android:layout_marginLeft="10dp"
+                android:background="@color/colorAccent"
+                android:text="@string/editar"
+                android:textColor="@color/iconsTint" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/editFecha">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"></LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <Button
+                        android:id="@+id/boton_aceptar"
+                        style="@style/Button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:background="@color/colorAccent"
+                        android:text="@string/aceptar"
+                        android:textColor="@color/iconsTint"
+                        android:visibility="gone" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"></LinearLayout>
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/boton_cambiar_pass"
+                style="@style/Button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_below="@+id/editFecha"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="10dp"
+                android:layout_toRightOf="@id/boton_editar"
+                android:background="@color/colorAccent"
+                android:text="Cambiar Contraseña"
+                android:textColor="@color/iconsTint" />
         </RelativeLayout>
     </RelativeLayout>
 </RelativeLayout>
