--- a/mobile/src/release/res/values/google_maps_api.xml
+++ b/mobile/src/release/res/values/google_maps_api.xml
@@ -1,22 +1,25 @@
 <resources>
     <!--
-    TODO: Before you release your application, you need a Google Maps API key.
+    TODO: Before you run your application, you need a Google Maps API key.
 
-    To do this, you can either add your release key credentials to your existing
-    key, or create a new key.
+    To get one, follow this link, follow the directions and press "Create" at the end:
 
-    Note that this file specifies the API key for the release build target.
-    If you have previously set up a key for the debug target with the debug signing certificate,
-    you will also need to set up a key for your release certificate.
+    https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=6C:BC:FB:55:1F:F8:57:0E:B8:AB:E4:87:11:1C:4A:28:13:1F:57:DC
+%3Bcom.david.socialsport.Pantallas
 
-    Follow the directions here:
+    You can also add your credentials to an existing key, using these values:
 
-    https://developers.google.com/maps/documentation/android/signup
+    Package name:
+6C:BC:FB:55:1F:F8:57:0E:B8:AB:E4:87:11:1C:4A:28:13:1F:57:DC
+    SHA-1 certificate fingerprint:
+6C:BC:FB:55:1F:F8:57:0E:B8:AB:E4:87:11:1C:4A:28:13:1F:57:DC
+
+    Alternatively, follow the directions here:
+    https://developers.google.com/maps/documentation/android/start#get-key
 
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
-        YOUR_KEY_HERE
-    </string>
+        AIzaSyC1sUhj2qB6f-Hlr3CyIwc2sZRpPDwt-sM    </string>
 </resources>
