--- a/mobile/src/main/res/layout/activity_crear_grupo.xml
+++ b/mobile/src/main/res/layout/activity_crear_grupo.xml
@@ -43,7 +43,8 @@
                     android:id="@+id/nombreGRupo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/nombre_del_grupo"/>
+                    android:hint="@string/nombre_del_grupo"
+                    />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="wrap_content"
