--- a/mobile/src/main/res/layout/bienvenida_slide1.xml
+++ b/mobile/src/main/res/layout/bienvenida_slide1.xml
@@ -3,5 +3,9 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/windowBackgraound">
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/slide1"/>
 
 </LinearLayout>
